--- a/index.html
+++ b/index.html
@@ -3,19 +3,26 @@
 <head>
   <meta charset="UTF-8" />
   <title>Puzzlebang 2023 Poster Puzzle</title>
-  <link href="styles.css" rel="stylesheet" />
+  <link href="poster-styles.css" rel="stylesheet" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Libre+Bodoni&family=Roboto+Mono&display=swap" rel="stylesheet"> 
 </head>
 <body>
-  <h1>PuzzleBang 2023 <small>with ACM Reflections | Projections</small></h1>
+  <div class="puzzle-location">
+    <div class="info">
+      <h1>PuzzleBang 2023 <small>with ACM Reflections | Projections</small></h1>
+      <p></code>Sign up to join the ship at <u><code>https://www.puzzlebang.com/????????</code></u></p>
+      <p>Be on board September 18th</p>
+    </div>
+    <img class="qr-code" src="qr-code.svg" alt="QR code to puzzlebang.com/poster" />
+  </div>
   <div class="npc-grid">
     <div class="pirate">
       <img src="puzzlebang-2023-simple-logo.svg" alt="Puzzlebang 2023 Logo" />
     </div>
     <div class="dialog box">
-      <div class="dialog-pointer"><img src="dialog-pointer.svg" alt="" width="100%" /></div>
+      <img class="dialog-pointer" src="dialog-pointer.svg" alt="" width="100%" />
       <img class="ship" src="ship.svg" width="100%" />
       <u>Ahoy</u> me maties! I heard you&apos;re looking for some <u>treasure</u>? Is the sparkle of the silver and <u>gold</u> and diamonds too making your heart beat faster?
       Sail with me! Sail under the flag of a <u>skull</u> & crossbones. My ship is loaded up with gunpowder, <u>rum</u>, and crackers for your pet <u>parrot</u>.
@@ -23,13 +30,7 @@
       Oh, BTW the deck is slippery, so be careful walking, especially those of you with a <u>pegleg</u>.
     </div>
   </div>
-  <div class="puzzle-container">
-    <code id="grid" class="box"></code>
-    <div class="puzzle-location">
-      <p></code>Sign up to join the ship at <u><code>https://www.puzzlebang.com/????????</code></u></p>
-      <p>Be on board September 18th</p>
-    </div>
-  </div>
-  <script src="poster.js"></script>
+  <code id="grid" class="box"></code>
+  <script src="poster-wordsearch.js"></script>
 </body>
 </html>
