Add svgs for each wordsearch word and update styles and poster details

--- a/index.html
+++ b/index.html
@@ -10,27 +10,34 @@
 </head>
 <body>
   <div class="puzzle-location">
+    <img src="puzzlebang-2023-simple-logo.svg" alt="Puzzlebang 2023 Logo" />
     <div class="info">
       <h1>PuzzleBang 2023 <small>with ACM Reflections | Projections</small></h1>
-      <p></code>Sign up to join the ship at <u><code>https://www.puzzlebang.com/????????</code></u></p>
-      <p>Be on board September 18th</p>
+      <p>Beginning September 18th</p>
     </div>
-    <img class="qr-code" src="qr-code.svg" alt="QR code to puzzlebang.com/poster" />
-  </div>
-  <div class="npc-grid">
-    <div class="pirate">
-      <img src="puzzlebang-2023-simple-logo.svg" alt="Puzzlebang 2023 Logo" />
-    </div>
-    <div class="dialog box">
-      <img class="dialog-pointer" src="dialog-pointer.svg" alt="" width="100%" />
-      <img class="ship" src="ship.svg" width="100%" />
-      <u>Ahoy</u> me maties! I heard you&apos;re looking for some <u>treasure</u>? Is the sparkle of the silver and <u>gold</u> and diamonds too making your heart beat faster?
-      Sail with me! Sail under the flag of a <u>skull</u> & crossbones. My ship is loaded up with gunpowder, <u>rum</u>, and crackers for your pet <u>parrot</u>.
-      Just tell me the magic word, walk across the <u>plank</u> with your friends, and we&apos;ll be off on the adventure of a lifetime!
-      Oh, BTW the deck is slippery, so be careful walking, especially those of you with a <u>pegleg</u>.
+    <div class="qr-code">
+      <img src="qr-code.svg" alt="QR code to puzzlebang.com/poster" />
+      view on phone
     </div>
   </div>
-  <code id="grid" class="box"></code>
+  <div class="puzzle-container">
+    <code id="grid" class="box"></code>
+    <img class="rum" src="rum.svg" alt="rum" />
+    <img class="treasure" src="treasure.svg" alt="treasure" />
+    <div class="npc">
+      <img class="skull" src="skull.svg" alt="skull" />
+      <div class="ahoy dialog box">
+        <img class="dialog-pointer" src="dialog-pointer.svg" alt="" /><u>Ahoy</u> matie!
+      </div>
+    </div>
+    <img class="pegleg" src="pegleg.svg" alt="pegleg" />
+    <img class="parrot" src="parrot.svg" alt="parrot" />
+    <img class="gold" src="gold.svg" alt="gold" />
+    <img class="ship" src="ship.svg" alt="ship with plank" />
+  </div>
+  <p class="signup">
+    Sign up to join the ship at <u><code>https://www.puzzlebang.com/????????</code></u>
+  </p>
   <script src="poster-wordsearch.js"></script>
 </body>
 </html>
