Update poster and dialog

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>Puzzlebang 2023 Poster Puzzle</title>
+  <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, minimum-scale=1.0">
   <link href="poster-styles.css" rel="stylesheet" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -26,9 +27,7 @@
     <img class="treasure" src="treasure.svg" alt="treasure" />
     <div class="npc">
       <img class="skull" src="skull.svg" alt="skull" />
-      <div class="ahoy dialog box">
-        <img class="dialog-pointer" src="dialog-pointer.svg" alt="" /><u>Ahoy</u> matie!
-      </div>
+      <img class="ahoy" src="dialog.svg" alt="" width="100%" />
     </div>
     <img class="pegleg" src="pegleg.svg" alt="pegleg" />
     <img class="parrot" src="parrot.svg" alt="parrot" />
